apps/production/unifi-network-application/unifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-app
  namespace: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-app

  template:
    metadata:
      labels:
        app: unifi-app

    spec:
      containers:
        - name: unifi-network-application
          # tags: https://quay.io/repository/linuxserver.io/unifi-network-application?tab=tags
          image: lscr.io/linuxserver/unifi-network-application:9.0.114

          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"

          ports:
            - containerPort: 8443
              name: https-admin
            - containerPort: 8080
              name: device-comm
            - containerPort: 3478
              protocol: UDP
              name: stun
            - containerPort: 10001
              protocol: UDP
              name: ap-discovery
            - containerPort: 1900
              protocol: UDP
              name: l2-discovery
            - containerPort: 8843
              name: guest-https
            - containerPort: 8880
              name: guest-http
            - containerPort: 6789
              name: mobile-test
            - containerPort: 5514
              protocol: UDP
              name: syslog

          volumeMounts:
            - name: unifi-data
              mountPath: /config

      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi-data
